<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, DiabDiet!</string>
    <string name="app_name">Diab Diet</string>
    <string name="main_solve">Solve Problem</string>
    <string name="main_edit">Edit Knowledge</string>
    
    <string name="form_btn_next">Give me diet plan!</string>
    
    <string name="form_intro_text">Dear user, please kindly fill this form to let us suggest you your best diet plan.</string>
    
    <string name="form_antro_header">Anthropometry Data</string>
    <string name="form_antro_gender_ask">Gender</string>
    <string name="form_antro_gender_male">Male</string>
    <string name="form_antro_gender_female">Female</string>
    <string name="form_antro_status_ask">I am ...</string>
    <string name="form_antro_status_preg">Pregnant</string>
    <string name="form_antro_status_breastfeed">Breastfeeding</string>
    <string name="form_antro_status_normal">None</string>
    <string name="form_antro_age_ask">Age</string>
    <string name="form_antro_age_e">y.o.</string>
    <string name="form_antro_bodyheight_ask">Height</string>
    <string name="form_antro_bodyheight_e">cm</string>
    <string name="form_antro_bodyweight_ask">Weight</string>
    <string name="form_antro_bodyweight_e">kg</string>
    
    <string name="form_lab_header">Laboratory Data</string>
    <string name="form_lab_temp_ask">Temperature</string>
    <string name="form_lab_temp_e">Celcius</string>
    <string name="form_lab_HDL_ask">HDL</string>
    <string name="form_lab_HDL_e">mg/cl</string>
    <string name="form_lab_LDL_ask">LDL</string>
    <string name="form_lab_LDL_e">mg/cl</string>
    <string name="form_lab_chol_ask">Cholesterol</string>
    <string name="form_lab_trig_ask">Triglyceride</string>
    <string name="form_lab_uricacid_ask">Uric acid</string>
    <string name="form_lab_systole_ask">Systole</string>
    <string name="form_lab_diastole_ask">Diastole</string>
    
    <string name="form_clinic_anam_header">Clinical And Anamnesa Record</string>
    <string name="form_anam_swallow">I have problem swallowing food</string>
    <string name="form_clinic_standhunger">I can control my hunger in a diet</string>
    <string name="form_clinic_bloodvein">I ever have problems with my blood veins</string>
    <string name="form_clinic_fracture">I\'m currently having fracture</string>
    <string name="form_clinic_cellulitis">I have a cellulities disease</string>
    <string name="form_clinic_wound">I\'m having wound</string>
    <string name="form_clinic_diablong">I have been having diabetes for more than 2 years</string>
    
    <string name="editk_header">Dear Expert, please be careful to tweak the knowledge settings</string>
    <string name="editk_rbw_header">RBW Settings</string>
    <string name="editk_rbw_type">Type</string>
    <string name="editk_rbw_min">Min. Value</string>
    <string name="editk_rbw_max">Max. Value</string>
    <string name="editk_addcal_header">Additional Calories</string>
    <string name="editk_addcal_type">Type</string>
    <string name="editk_addcal_amount">Amount</string>
    <string name="editk_complication_header">Complication constraints</string>
    <string name="editk_complication_type">Type</string>
    <string name="editk_complication_meat">Meat</string>
    <string name="editk_complication_tempe">Tempe</string>
    <string name="editk_save_btn">Save changes</string>
    <string name="editk_server_btn">Load from server</string>
    <string name="editk_toast_save">Settings saved</string>
    
    <string name="solved_header">Here is your diet menu!</string>
    <string name="solved_type">Type</string>
    <string name="solved_time_7">07.00</string>
    <string name="solved_time_12">12.00</string>
    <string name="solved_time_6">18.00</string>
</resources>