<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
  <ScrollView
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	>
  	
  	<LinearLayout
  		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
		android:padding="3dip"
        >
        
		<!-- HEADER -->
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10dip" android:layout_marginBottom="10dip" android:layout_marginLeft="5dip" android:layout_marginRight="5dip">
	       	<ImageView android:src="@drawable/smile" android:layout_width="wrap_content" android:layout_height="wrap_content" />
	       	<TextView 
				android:text="@string/editk_header"
	       		android:layout_width="wrap_content" 
	       		android:layout_height="wrap_content" 
	       		android:layout_marginLeft="3dip" 
	       		android:padding="5dip" 
	       		android:background="#aaffaa"
	       		android:textColor="#000000"></TextView>
       	</LinearLayout>
       	
       	<!-- TABLE -->
       	<TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/solve_table">
       	</TableLayout>
       	
       	<!-- RBW -->
       	<TextView 
       		android:layout_width="fill_parent" 
       		android:layout_height="wrap_content" 
       		android:padding="5dip"
       		android:text="@string/editk_rbw_header"
       		android:background="#eeeeee" android:textColor="#000000"/>
       		
       	<TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/editk_rbw_table">
       	
       	<TableRow>
       		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10px" android:layout_marginRight="10px" android:text="@string/editk_rbw_type"/>
       		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10px" android:layout_marginRight="10px" android:text="@string/editk_rbw_min"/>
       		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10px" android:layout_marginRight="10px" android:text="@string/editk_rbw_max"/>
       	</TableRow>
       	</TableLayout>
       	
       	<View android:layout_height="2dip" android:layout_width="fill_parent" android:background="#eeeeee" android:layout_marginTop="5dip" android:layout_marginBottom="5dip"/>
       	
       	<!-- ADDITIONAL CALORIES -->
       	<TextView 
       		android:layout_width="fill_parent" 
       		android:layout_height="wrap_content" 
       		android:padding="5dip"
       		android:text="@string/editk_addcal_header"
       		android:background="#eeeeee" android:textColor="#000000"/>
       		
       	<TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/editk_addcal_table">
       	
       	<TableRow>
       		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10px" android:layout_marginRight="10px" android:text="@string/editk_addcal_type"/>
       		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10px" android:layout_marginRight="10px" android:text="@string/editk_addcal_amount"/>
       	</TableRow>
       	</TableLayout>
       	
       	<View android:layout_height="2dip" android:layout_width="fill_parent" android:background="#eeeeee" android:layout_marginTop="5dip" android:layout_marginBottom="5dip"/>
       	
       	<!-- COMPLICATION -->
       	<TextView 
       		android:layout_width="fill_parent" 
       		android:layout_height="wrap_content" 
       		android:padding="5dip"
       		android:text="@string/editk_complication_header"
       		android:background="#eeeeee" android:textColor="#000000"/>
       		
       	<TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/editk_complication_table">
       	
       	<TableRow>
       		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10px" android:layout_marginRight="10px" android:text="@string/editk_complication_type"/>
       		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10px" android:layout_marginRight="10px" android:text="@string/editk_complication_meat"/>
       		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10px" android:layout_marginRight="10px" android:text="@string/editk_complication_tempe"/>
       	</TableRow>
       	</TableLayout>
       	
       	<View android:layout_height="2dip" android:layout_width="fill_parent" android:background="#eeeeee" android:layout_marginTop="5dip" android:layout_marginBottom="5dip"/>
       	
       	<!-- BUTTONS -->
       	<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
       		<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_centerHorizontal="true">
		       	<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/editk_save_btn" android:text="@string/editk_save_btn" />
		       	<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/editk_server_btn" android:text="@string/editk_server_btn" />
	       	</LinearLayout>
       	</RelativeLayout>
       	
       	
       	
	</LinearLayout>
	
  </ScrollView>
  
</LinearLayout>
