<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
  <ScrollView
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	>
  	
  	<LinearLayout
  		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
		android:padding="3dip"
        >
        
		<!-- HEADER -->
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10dip" android:layout_marginBottom="10dip" android:layout_marginLeft="5dip" android:layout_marginRight="5dip">
	       	<ImageView android:src="@drawable/smile" android:layout_width="wrap_content" android:layout_height="wrap_content" />
	       	<TextView 
	       		android:id="@+id/solve_say"
	       		android:text="@string/solved_header"
	       		android:layout_width="wrap_content" 
	       		android:layout_height="wrap_content" 
	       		android:layout_marginLeft="3dip" 
	       		android:padding="5dip" 
	       		android:background="#aaffaa"
	       		android:textColor="#000000"></TextView>
       	</LinearLayout>
       	
       	<!-- DIET PLAN INFORMATION -->
       	<LinearLayout
       		android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="#eeeeee" android:layout_marginBottom="5dip" android:layout_marginTop="2dip">
       		<TextView android:id="@+id/solved_dietname" android:textColor="#000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dip "/>
       		<TextView android:id="@+id/solved_dietcal" android:textColor="#000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dip "/>
       		</LinearLayout>
       	<TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/solve_table">
	       	<TableRow>
	       		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:text="@string/solved_type"/>
	       		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:text="@string/solved_time_7"/>
	       		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:text="@string/solved_time_12"/>
	       		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5px" android:layout_marginRight="5px" android:text="@string/solved_time_6"/>
	       	</TableRow>	       	
     		<View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#eeeeee" android:layout_margin="5dip"/>
       	</TableLayout>
       	<View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#eeeeee" android:layout_marginTop="5dip"/>
       	
       	<!-- EXPLANATION -->
       	<LinearLayout
       		android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="#eeeeee" android:layout_marginBottom="5dip" android:layout_marginTop="5dip">
       		<TextView android:text="@string/solved_explanation_header" android:textColor="#000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dip "/>
       		</LinearLayout>
       	<LinearLayout
       		android:id="@+id/solved_explanation_container"
       		android:orientation="vertical"
       		android:layout_width="fill_parent" android:layout_height="wrap_content">
       		
       		</LinearLayout>
       	
       	<!-- TIPS -->
       	<LinearLayout
       		android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="#eeeeee" android:layout_marginBottom="5dip" android:layout_marginTop="5dip">
       		<TextView android:text="@string/solved_tips_header" android:textColor="#000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dip "/>
       		</LinearLayout>
       	<LinearLayout
       		android:id="@+id/solved_tips_container"
       		android:orientation="vertical"
       		android:layout_width="fill_parent" android:layout_height="wrap_content">
       		
       		</LinearLayout>
       	<View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#eeeeee" android:layout_marginTop="5dip"/>
       	
	</LinearLayout>
	
  </ScrollView>
  
</LinearLayout>
